--- a/bin/templates/package.hbs
+++ b/bin/templates/package.hbs
@@ -1,5 +1,5 @@
 {
-  "name": "{{name}}",
+  "name": "@ReactSeam/{{name}}",
   "version": "1.0.7",
   "description": "{{pascalCase name}} Component description",
   "license": "ISC",
