--- a/bin/templates/component.hbs
+++ b/bin/templates/component.hbs
@@ -1,8 +1,12 @@
 import React from 'react';
+import PropTypes from 'prop-types';
 
 function {{pascalCase name}}(props) {
-
     return ( <div>{{pascalCase name}}</div> );
 }
+
+{{pascalCase name}}.propTypes = {
+
+};
 
 export default {{pascalCase name}};
