--- a/bin/templates/package.hbs
+++ b/bin/templates/package.hbs
@@ -30,6 +30,7 @@
     "@babel/preset-react": "^7.0.0",
     "@storybook/addon-actions": "^4.0.0-alpha.20",
     "@storybook/react": "^4.1.18",
+    "storybook-addon-rtl": "^0.2.2",
     "@tulipjs/eslint-config": "^1.1.1",
     "babel-loader": "^8.0.1",
     "css-loader": "^1.0.0",
@@ -43,7 +44,13 @@
     "webpack-cli": "^3.2.0"
   },
   "peerDependencies": {
+    "prop-types": "15.7.2",
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/lab": "^4.0.0-alpha.56"
   },
-	"dependencies": {
-	}
+  "dependencies": {
+    "prop-types": "15.7.2",
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/lab": "^4.0.0-alpha.56"
+  }
 }
