--- a/bin/templates/index.hbs
+++ b/bin/templates/index.hbs
@@ -1,3 +1,9 @@
-// Export all the explicitly exported components, this file will contain our
-// components when built by webpack and sent off to the world.
-export {default as {{pascalCase name}} } from './{{name}}';
+import React from 'react';
+import { render } from "react-dom";
+import {{pascalCase name}} from "./lib";
+
+const App = () => (
+	<{{pascalCase name}} />
+);
+
+render(<App />, document.getElementById("root"));
