--- a/bin/templates/package.hbs
+++ b/bin/templates/package.hbs
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "description": "{{pascalCase name}} Component description",
   "license": "ISC",
-  "main": "dist/{{name}}.js",
+  "main": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --open",
     "build": "webpack --mode production",
-    "storybook": "start-storybook -p 9001",
     "docz:dev": "docz dev",
     "docz:build": "docz build"
   },
@@ -28,9 +28,6 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "@storybook/addon-actions": "^4.0.0-alpha.20",
-    "@storybook/react": "^4.1.18",
-    "storybook-addon-rtl": "^0.2.2",
     "@tulipjs/eslint-config": "^1.1.1",
     "babel-loader": "^8.0.1",
     "css-loader": "^1.0.0",
@@ -41,16 +38,19 @@
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.28.3",
-    "webpack-cli": "^3.2.0"
+    "webpack-cli": "^3.2.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "peerDependencies": {
     "prop-types": "15.7.2",
-    "@material-ui/core": "^4.10.2",
-    "@material-ui/lab": "^4.0.0-alpha.56"
+    "@material-ui/core": "^4.9.13",
+    "react": "^16.8.6",
+	"react-dom": "^16.8.6"
   },
   "dependencies": {
     "prop-types": "15.7.2",
-    "@material-ui/core": "^4.10.2",
-    "@material-ui/lab": "^4.0.0-alpha.56"
+    "@material-ui/core": "^4.9.13",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
