--- a/bin/templates/webpack.config.hbs
+++ b/bin/templates/webpack.config.hbs
@@ -3,7 +3,8 @@
 const path = require('path');
 
 // Webpack is just a bunch of keys on module.exports!
-module.exports = {
+var config = {
+	mode: 'development',
 	// This is where our app starts. This is why we have done all this importing
 	// and exporting, to get to here
 	entry: './src/index.js',
@@ -65,17 +66,28 @@ module.exports = {
 		// You can do fun things here like use the [hash] keyword to generate unique
 		// filenames, but for this purpose rinse.js is fine. This file and path will
 		// be what you put in package.json's "main" field
-		filename: '{{name}}.js',
+		filename: 'main.js',
 		// This field determines how things are importable when installed from other
 		// sources. UMD may not be correct now and there is an open issue to fix this,
 		// but until then, more reading can be found here:
 		// https://webpack.js.org/configuration/output/#output-librarytarget
 		libraryTarget: 'umd',
-		library: '{{name}}',
-	},
-	externals: [
-		'react',
-		'react-dom',
-		/^@material-ui\/.+$/,
-	],
+	}
+};
+
+module.exports = (env, argv) => {
+
+	if (argv.mode === 'production') {
+		config.mode='production';
+		config.entry='./src/lib/index.js';
+		config.externals= [
+			'react',
+			'react-dom',
+			/^@material-ui\/.+$/,
+		];
+		return config;
+	}
+
+	return config;
+
 };
